--- a/AP2-EX3/app/src/main/res/layout/activity_main.xml
+++ b/AP2-EX3/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".View.MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/editTextTextPersonName3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="IP:"
+        tools:layout_editor_absoluteX="49dp"
+        tools:layout_editor_absoluteY="72dp" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Port:"
+        tools:layout_editor_absoluteX="49dp"
+        tools:layout_editor_absoluteY="137dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="115dp"
+        android:layout_height="55dp"
+        android:text="Connect"
+        tools:layout_editor_absoluteX="90dp"
+        tools:layout_editor_absoluteY="201dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
