--- a/FG_Controller/app/src/main/res/layout/activity_main.xml
+++ b/FG_Controller/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView_port" />
 
         <com.example.fg_controller.view.Joystick
+            android:id="@+id/joystick"
             android:layout_width="250dp"
             android:layout_height="250dp"
             app:layout_constraintBottom_toTopOf="@+id/seekBarXscale"
