--- a/FG_Controller/app/src/main/res/layout/activity_main.xml
+++ b/FG_Controller/app/src/main/res/layout/activity_main.xml
@@ -103,9 +103,9 @@
             android:layout_marginEnd="218dp"
             android:layout_marginRight="218dp"
             android:layout_marginBottom="115dp"
-            android:rotation="270"
             android:max="1000"
             android:progress="@={viewModel.throttle}"
+            android:rotation="270"
             app:layout_constraintBottom_toTopOf="@+id/seekBarYscale"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_port" />
@@ -118,6 +118,28 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/connect_button" />
+
+        <TextView
+            android:id="@+id/textView_throttle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="26dp"
+            android:layout_marginLeft="26dp"
+            android:layout_marginBottom="20dp"
+            android:text="throttle"
+            app:layout_constraintBottom_toTopOf="@+id/joystick"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textView_rudder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="23dp"
+            android:layout_marginRight="23dp"
+            android:text="rudder"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/seekBarYscale" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
