--- a/FG_Controller/app/src/main/res/layout/activity_main.xml
+++ b/FG_Controller/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
             android:layout_marginRight="25dp"
             android:layout_marginBottom="186dp"
             android:text="port"
-            app:layout_constraintBottom_toTopOf="@+id/seekBarYscale"
+            app:layout_constraintBottom_toTopOf="@+id/seekBarXscale"
             app:layout_constraintEnd_toStartOf="@+id/editText_port"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_ip" />
@@ -81,7 +81,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editText_port" />
 
         <SeekBar
-            android:id="@+id/seekBarXscale"
+            android:id="@+id/seekBarYscale"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="58dp"
@@ -89,24 +89,24 @@
             android:layout_marginEnd="58dp"
             android:layout_marginRight="58dp"
             android:layout_marginBottom="130dp"
-            android:max="1000"
-            android:progress="@={viewModel.throttle}"
+            android:max="2000"
+            android:progress="@={viewModel.rudder}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/seekBarYscale" />
+            app:layout_constraintTop_toBottomOf="@+id/seekBarXscale" />
 
         <SeekBar
-            android:id="@+id/seekBarYscale"
+            android:id="@+id/seekBarXscale"
             android:layout_width="295dp"
             android:layout_height="0dp"
             android:layout_marginEnd="218dp"
             android:layout_marginRight="218dp"
             android:layout_marginBottom="115dp"
             android:rotation="270"
-            android:max="2000"
-            android:progress="@={viewModel.rudder}"
-            app:layout_constraintBottom_toTopOf="@+id/seekBarXscale"
+            android:max="1000"
+            android:progress="@={viewModel.throttle}"
+            app:layout_constraintBottom_toTopOf="@+id/seekBarYscale"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_port" />
 
@@ -114,7 +114,7 @@
             android:id="@+id/joystick"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            app:layout_constraintBottom_toTopOf="@+id/seekBarXscale"
+            app:layout_constraintBottom_toTopOf="@+id/seekBarYscale"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/connect_button" />
